@@ -46,7 +46,7 @@ public class RakuSuggestVariableName extends MacroBase {
       .filter(v -> !(temporaryTextRange.contains(v.getTextRange()) && file.equals(v.getContainingFile())))
       .map(p -> ((Perl6VariableDecl)p).getName())
       .filter(Objects::nonNull)
-      .collect(Collectors.toList());
+      .toList();
     for (int i = 0; i < 500; i++) {
       String potentialName = name + (i == 0 ? "" : i);
       if (!names.contains(potentialName)) {
