@@ -59,7 +59,7 @@ public class Perl6RegexCallReference extends PsiReferenceBase<Perl6RegexCall> {
                     // Filter out external symbols for regex-calls
                     .filter(symbol -> !symbol.isExternal() )
                     // Delete first `.`, as we already have one in method (e.g. `.alpha`)
-                    .map(sym -> sym.getName().substring(1)).collect(toList()));
+                    .map(sym -> sym.getName().substring(1)).toList());
         }
         result.addAll(Arrays.asList(PREDEFINED_METHODS));
         return result.toArray();
