@@ -52,7 +52,7 @@ public class Perl6EnumImpl extends Perl6TypeStubBasedPsi<Perl6EnumStub> implemen
                 return values;
             text = text.substring(1, text.length()-1);
             String[] result = text.split("\\s+");
-            values.addAll(Arrays.stream(result).filter(s -> !s.isEmpty()).collect(Collectors.toList()));
+            values.addAll(Arrays.stream(result).filter(s -> !s.isEmpty()).toList());
             return values;
         }
         PsiElement semilist = PsiTreeUtil.findChildOfType(this, Perl6SemiList.class);
